--- a/Memory-Vault/app/couchapp.json
+++ b/Memory-Vault/app/couchapp.json
@@ -1,4 +1,4 @@
 {
-    "name": "Name of your CouchApp",
-    "description": "CouchApp"
+    "name": "Memory Vault",
+    "description": "ASD Project"
 }
