--- a/Memory-Vault/couchapp.rc
+++ b/Memory-Vault/couchapp.rc
@@ -2,6 +2,10 @@
   "env": {
     "local": {
       "db": "http://127.0.0.1:5984/memory-vault"
+    },
+    "cloudant": {
+      "db": "https://indiallefuringentormessu:6hWjAIdaynDBRPcsIt7VcQhS@eng618.cloudant.com/memory-vault"
     }
   }
 }
+ 
